# MedicalRecordWallet

./: .gitignore  CMakeLists.txt  README.md
src/: LoginDialog.cpp  LoginDialog.h  main.cpp
